fixed footer spacing

--- a/styles.css
+++ b/styles.css
@@ -118,7 +118,7 @@
     display: grid;
     grid-template-columns: auto auto auto 1fr auto auto auto;
     grid-template-rows: auto;
-    margin: 323px 0px 0px 0px;
+    margin: 317px 0px 0px 0px;
     background-color: rgb(240, 239, 239); 
 }
 
